News UAT/force-app/main/default/objects/Product_Order_Tier_Ranges__c/Product_Order_Tier_Ranges__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Product Order Tier Ranges</label>
</CustomObject>