News UAT/force-app/main/default/objects/Product_Order_Tier_Ranges__c/fields/Lowerbound__c.field-meta.xml
<CustomField>
    <fullName>Lowerbound__c</fullName>
    <label>Lowerbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>