News UAT/force-app/main/default/objects/Product_Order_Tier_Ranges__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>