News UAT/force-app/main/default/objects/Product_Order_Tier_Ranges__c/fields/Tier_level__c.field-meta.xml
<CustomField>
    <fullName>Tier_level__c</fullName>
    <label>Tier level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>