News UAT/force-app/main/default/objects/Product_Order_Tier_Ranges__c/fields/Upperbound__c.field-meta.xml
<CustomField>
    <fullName>Upperbound__c</fullName>
    <label>Upperbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>